syntax = "proto3";

package order;
option go_package = "api/order;order";
import "google/api/annotations.proto";

service OrderService {
  rpc GetOrder (GetOrderRequest) returns (GetOrderResponse) {
    option (google.api.http) = {
      get: "/v1/order/{id}"
    };
  }
}

message GetOrderRequest {
  int64 id = 1;
}

message GetOrderResponse {
  int64 orderID = 1;
  string orderSN = 2;
  int64  userID = 3;
  string username = 4;
}
